changed folder color when hover

--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ body {
   border-radius: 8px;
 }
 .universal-gird-item-buttons-group-row__add svg:hover path {
-  fill: #fd3b41;
+  fill: #ff6e30;
   fill-opacity: 1;
 }
 
