--- a/#source/scss/_universalStyles.scss
+++ b/#source/scss/_universalStyles.scss
@@ -254,7 +254,7 @@
         box-shadow: 0px 5px 10px -3px rgba(18, 18, 18, 0.15);
         border-radius: 8px;
         path {
-          fill: $base-red;
+          fill: $base-orange;
           fill-opacity: 1;
         }
       }
