--- a/css/style.css
+++ b/css/style.css
@@ -927,13 +927,6 @@ body {
   .header-row__nav._active {
     left: 0;
   }
-  .header-row__nav::before {
-    content: "";
-    top: 0;
-    left: 0;
-    height: 70px;
-    z-index: 2;
-  }
   .header-row__list > li {
     flex-wrap: wrap;
     margin: 0 0 30px 0;
@@ -1039,6 +1032,7 @@ body {
     flex-direction: column;
     align-items: self-start;
     flex: 1 1 auto;
+    margin: 0 0 50px 0;
   }
   .header-nav-row__list li {
     margin: 0 0 24px 0;
