changed a couple of styles

--- a/#source/scss/_main.scss
+++ b/#source/scss/_main.scss
@@ -408,6 +408,7 @@
 .join-us {
   margin: 0 0 240px 0;
   &__small-container {
+    padding: 0 15px;
     max-width: 553px;
     margin: 0 auto;
   }
