Added logic 'load more'

--- a/#source/scss/_main.scss
+++ b/#source/scss/_main.scss
@@ -130,6 +130,17 @@
   display: flex;
   &__item {
   }
+  &__item-load-more {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+  }
+  &__item-load-more._active {
+    pointer-events: auto;
+
+    position: static;
+    opacity: 1;
+  }
   &__header-row {
   }
 
