--- a/#source/scss/_universalStyles.scss
+++ b/#source/scss/_universalStyles.scss
@@ -6,6 +6,7 @@
     margin: 0 12px 0 0;
   }
   p {
+    color: $base-white-color;
     font-weight: 600;
     font-size: 22px;
     line-height: 2.063em;
